deploy/overlays/production/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plavenky
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: plavenky
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
