deploy/overlays/production/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plavenky
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - plavenky.example.com
      secretName: plavenky-tls
  rules:
    - host: plavenky.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod-plavenky
                port:
                  number: 80
